# fdx

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  dir_entry.rs  error.rs  exit_codes.rs  filesystem.rs  main.rs  output.rs  walk.rs
