[package]
name = "fdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
normpath = "0.3.2"
ignore = "0.4.3"
once_cell = "1.15.0"
lscolors = "0.12"
regex = "1.6.0"
regex-syntax = "0.6"

[dependencies.clap]
version = "3.1"
features = ["suggestions", "color", "wrap_help", "cargo", "unstable-grouped"]

[target.'cfg(unix)'.dependencies]
users = "0.11.0"
nix = { version = "0.24.2", default-features = false, features = ["signal"] }
